mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  labels:
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 8081
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: mongo-express-service
# spec:
#   type: LoadBalancer
#   selector:
#     app: mongo-express
#   ports:
#   - port: 8081
#     targetPort: 8081
#     nodePort: 30000
#     protocol: TCP
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  type: ClusterIP
  selector:
    app: mongo-express
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
